--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "binance-ftx-proxy",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Proxy for Binance and FTX",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "tsc && node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "dmc0125",
   "license": "MIT",
   "dependencies": {
-    "binance-api-nodejs": "^0.0.13",
+    "binance-api-nodejs": "^0.0.14",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ftx-api-nodejs": "^0.0.10",
+    "ftx-api-nodejs": "^0.0.11",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0"
   },
