--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "binance-ftx-proxy",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Proxy for Binance and FTX",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
